# ublox-short-range-rs

./: .gitignore  Cargo.toml  Design_diagram.drawio  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  grcov.yml  lint.yml  test.yml
examples/: linux.rs
examples/rpi-pico/: Cargo.toml  rust-toolchain.toml
examples/rpi-pico/.cargo/: config.toml
examples/rpi-pico/src/: common.rs
src/: client.rs  config.rs  connection.rs  error.rs  fmt.rs  lib.rs  network.rs  options.rs  peer_builder.rs  prelude.rs  test_helpers.rs  traits.rs
src/asynch/: at_udp_socket.rs  channel.rs  control.rs  internal_stack.rs  mod.rs  network.rs  ppp.rs  resources.rs  runner.rs  state.rs
src/asynch/ublox_stack/: device.rs  dns.rs  mod.rs  peer_builder.rs  tcp.rs  tls.rs  udp.rs
src/blocking/: client.rs  dns.rs  mod.rs  tcp_stack.rs  udp_stack.rs
src/command/: cmd.rs  custom_digest.rs  edm.rs  mod.rs  response.rs  types.rs
src/command/data mode/: mod.rs  types.rs
src/command/data_mode/: mod.rs  responses.rs  types.rs  urc.rs
src/command/datamode/: responses.rs  types.rs
src/command/edm/: mod.rs  types.rs  urc.rs
src/command/ethernet/: mod.rs  responses.rs  types.rs  urc.rs
src/command/general/: mod.rs  responses.rs  types.rs
src/command/gpio/: mod.rs  responses.rs  types.rs
src/command/network/: mod.rs  responses.rs  types.rs  urc.rs
src/command/ping/: mod.rs  responses.rs  types.rs  urc.rs
src/command/security/: mod.rs  responses.rs  types.rs
src/command/system/: mod.rs  responses.rs  types.rs
src/command/wifi/: mod.rs  responses.rs  types.rs  urc.rs
src/socket/: mod.rs  ref_.rs  ring_buffer.rs  tcp.rs
src/wifi/: ap.rs  connection.rs  mod.rs  network.rs  options.rs  socket.rs  sta.rs  supplicant.rs
ublox-short-range/: Cargo.toml
ublox-short-range/src/: client.rs  config.rs  error.rs  lib.rs  test_helper.rs  test_helpers.rs  traits.rs
ublox-short-range/src/asynch/: mod.rs  tcp.rs
ublox-short-range/src/blocking/: dns.rs  tcp_stack.rs  timer.rs  tls.rs
ublox-short-range/src/command/: custom_digest.rs  edm.rs  mod.rs
ublox-short-range/src/command/data_mode/: mod.rs  responses.rs  types.rs  urc.rs
ublox-short-range/src/command/edm/: mod.rs  types.rs  urc.rs
ublox-short-range/src/command/ethernet/: mod.rs  responses.rs  types.rs  urc.rs
ublox-short-range/src/command/general/: mod.rs  responses.rs  types.rs
ublox-short-range/src/command/gpio/: mod.rs  responses.rs
ublox-short-range/src/command/network/: mod.rs  responses.rs  types.rs  urc.rs
ublox-short-range/src/command/ping/: mod.rs  responses.rs  types.rs  urc.rs
ublox-short-range/src/command/security/: mod.rs  responses.rs  types.rs
ublox-short-range/src/command/system/: mod.rs  responses.rs  types.rs
ublox-short-range/src/command/wifi/: mod.rs  responses.rs  types.rs  urc.rs
ublox-short-range/src/socket/: meta.rs  mod.rs  ref_.rs  ring_buffer.rs  set.rs  tcp.rs  udp.rs
ublox-short-range/src/wifi/: ap.rs  connection.rs  dns.rs  mod.rs  network.rs  options.rs  peer_builder.rs  socket.rs  ssl.rs  sta.rs  supplicant.rs  tcp_stack.rs  temp.rs  tls.rs  udp_stack.rs
