[package]
name = "ublox-short-range-rs"
version = "0.1.1"
authors = ["Mads Andresen <ma@blackbird.online>"]
description = "Driver crate for u-blox short range devices, implementation follows 'UBX-14044127 - R40'"
readme = "../README.md"
keywords = ["ublox", "wifi", "shortrange", "bluetooth"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-short-range-rs"
edition = "2021"

[lib]
name = "ublox_short_range"
doctest = false

[dependencies]
atat = { version = "0.20.0", features = ["derive", "bytes"] }
# atat = { git = "https://github.com/BlackbirdHQ/atat", rev = "70283be", features = ["derive", "defmt", "bytes"] }
heapless = { version = "^0.8", features = ["serde"] }
no-std-net = { version = "0.6", features = ["serde"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
ublox-sockets = { version = "0.5", features = ["edm"], optional = true }
postcard = "1.0.4"
portable-atomic = "1.5"

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

embedded-hal = "=1.0.0-rc.3"
embassy-time = "0.2"
embassy-sync = "0.5"
embassy-futures = "0.1"
embassy-net-driver = "0.2"

embedded-nal-async = { version = "0.7", optional = true }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }

embedded-io = "0.6"
embedded-io-async = "0.6"

[features]
default = ["async", "odin_w2xx", "ublox-sockets", "socket-tcp"]

async = ["dep:embedded-nal-async", "atat/async", "ublox-sockets?/async"]

std = []

defmt = [
    "dep:defmt",
    "postcard/use-defmt",
    "heapless/defmt-03",
    "atat/defmt",
    "ublox-sockets/defmt",
]

odin_w2xx = []
nina_w1xx = []
nina_b1xx = []
anna_b1xx = []
nina_b2xx = []
nina_b3xx = []

socket-tcp = [
    "ublox-sockets?/socket-tcp",
    # "smoltcp?/socket-tcp"
]
socket-udp = [
    "ublox-sockets?/socket-udp",
    # "smoltcp?/socket-udp"
]

[workspace]
members = []
default-members = ["."]
exclude = ["examples"]


[patch.crates-io]
atat = { path = "../atat/atat" }
ublox-sockets = { path = "../ublox-sockets" }
no-std-net = { path = "../no-std-net" }

embassy-time = { path = "../embassy/embassy-time" }
embassy-sync = { path = "../embassy/embassy-sync" }
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-net-driver = { path = "../embassy/embassy-net-driver" }
