[package]
name = "ublox-short-range-rs"
version = "0.1.1"
authors = ["Mads Andresen <ma@blackbird.online>"]
description = "Driver crate for u-blox short range devices, implementation follows 'UBX-14044127 - R40'"
readme = "../README.md"
keywords = ["ublox", "wifi", "shortrange", "bluetooth"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-short-range-rs"
edition = "2021"

[lib]
name = "ublox_short_range"
doctest = false

[dependencies]
atat = { version = "0.22", features = ["derive", "bytes"] }

heapless = { version = "^0.8", features = ["serde"] }
no-std-net = { version = "0.6", features = ["serde"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
# ublox-sockets = { version = "0.5", features = ["edm"], optional = true }
ublox-sockets = { git = "https://github.com/BlackbirdHQ/ublox-sockets", rev = "9f7fe54", optional = true }
portable-atomic = "1.6"

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

embedded-hal = "1.0"
embassy-time = "0.3"
embassy-sync = "0.6"
embassy-futures = "0.1"

embedded-nal-async = { version = "0.7" }
futures-util = { version = "0.3.29", default-features = false }

embedded-io-async = "0.6"

embassy-net-ppp = { version = "0.1", optional = true }
embassy-net = { version = "0.4", features = [
    "proto-ipv4",
    "medium-ip",
], optional = true }


[features]
default = ["socket-tcp", "socket-udp"]

internal-network-stack = ["dep:ublox-sockets", "edm"]
edm = ["ublox-sockets?/edm"]

# PPP mode requires UDP sockets enabled, to be able to do AT commands over UDP port 23
ppp = ["dep:embassy-net-ppp", "dep:embassy-net", "socket-udp"]

socket-tcp = ["ublox-sockets?/socket-tcp", "embassy-net?/tcp"]
socket-udp = ["ublox-sockets?/socket-udp", "embassy-net?/udp"]

defmt = [
    "dep:defmt",
    "heapless/defmt-03",
    "atat/defmt",
    "ublox-sockets?/defmt",
    "embassy-net-ppp?/defmt",
    "embassy-net?/defmt",
]
log = ["dep:log", "ublox-sockets?/log", "atat/log"]

odin_w2xx = []
nina_w1xx = []
nina_b1xx = []
anna_b1xx = []
nina_b2xx = []
nina_b3xx = []

[workspace]
members = []
default-members = ["."]
exclude = ["examples"]


[patch.crates-io]
no-std-net = { git = "https://github.com/rushmorem/no-std-net", branch = "issue-15" }
atat = { path = "../atat/atat" }