[package]
name = "ublox-short-range-rs"
version = "0.1.1"
authors = ["Mads Andresen <ma@blackbird.online>"]
description = "Driver crate for u-blox short range devices, implementation follows 'UBX-14044127 - R40'"
readme = "../README.md"
keywords = ["ublox", "wifi", "shortrange", "bluetooth"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-short-range-rs"
edition = "2018"

[lib]
name = "ublox_short_range"
doctest = false

[dependencies]
atat = { version = "0.13.1", features = ["derive", "defmt", "bytes"] }
heapless = { version = "^0.7", features = ["serde"] }
no-std-net = { version = "^0.5", features = ["serde"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
ublox-sockets = { git = "https://github.com/BlackbirdHQ/ublox-sockets", rev = "d945c09" }
hash32 = "^0.2.1"
hash32-derive = "^0.1.0"

defmt = "0.2"
embedded-hal = "1.0.0-alpha.4"
embedded-nal = "0.6.0"
embedded-time = "0.11.0"
typenum = "^1"

[features]
default = ["odin_w2xx", "wifi_ap", "wifi_sta", "socket-udp", "socket-tcp"]

odin_w2xx = []
nina_w1xx = []
nina_b1xx = []
anna_b1xx = []
nina_b2xx = []
nina_b3xx = []

socket-tcp = ["ublox-sockets/socket-tcp"]
socket-udp = ["ublox-sockets/socket-udp"]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

wifi_ap = []
wifi_sta = []
bluetooth = []
