[package]
name = "ublox-short-range-rs"
version = "0.1.1"
authors = ["Mads Andresen <ma@blackbird.online>"]
description = "Driver crate for u-blox short range devices, implementation follows 'UBX-14044127 - R40'"
readme = "../README.md"
keywords = ["ublox", "wifi", "shortrange", "bluetooth"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-short-range-rs"
edition = "2021"

[lib]
name = "ublox_short_range"
doctest = false

[dependencies]
atat = { version = "0.16.1", features = ["derive", "defmt", "bytes"] }
heapless = { version = "^0.7", features = ["serde", "defmt-impl"] }
no-std-net = { version = "^0.5", features = ["serde"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
ublox-sockets = { git = "https://github.com/BlackbirdHQ/ublox-sockets", rev = "30c6550", features = ["defmt"] }
hash32 = "^0.2.1"
hash32-derive = "^0.1.0"

defmt = { version = "0.3" }
embedded-hal = "1.0.0-alpha.8"
embedded-nal = "0.6.0"
fugit = { version = "0.3", features = ["defmt"] }

[features]
default = ["odin_w2xx", "wifi_ap", "wifi_sta", "socket-udp", "socket-tcp"]

odin_w2xx = []
nina_w1xx = []
nina_b1xx = []
anna_b1xx = []
nina_b2xx = []
nina_b3xx = []

socket-tcp = ["ublox-sockets/socket-tcp"]
socket-udp = ["ublox-sockets/socket-udp"]

wifi_ap = []
wifi_sta = []
bluetooth = []
