[package]
name = "ublox-short-range-examples-rpi-pico"
version = "0.1.0"
edition = "2021"


[dependencies]
ublox-short-range-rs = { path = "../../", features = ["odin-w2xx", "defmt"] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.8" }
embassy-rp = { version = "0.10", features = [
    "defmt",
    "time-driver",
    "rp2040",
] }
embassy-futures = { version = "0.1" }

static_cell = "2"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

embedded-io-async = "0.7"
heapless = "0.9"
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

embassy-net = { version = "0.9", optional = true, features = [
    "defmt",
    "proto-ipv4",
    "medium-ip",
    "tcp",
    "udp",
    "dns"
] }
embassy-net-ppp = { version = "0.3", optional = true, features = ["defmt"] }


[features]
internal-network-stack = ["ublox-short-range-rs/internal-network-stack"]
ppp = ["dep:embassy-net", "dep:embassy-net-ppp", "ublox-short-range-rs/ppp"]

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
